# NexConnect

./: .gitignore  NexConnect.db  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  connector-guides.md  openapi-spec.md
src/: app.py  main.py
src/api/: deps.py  github.py  users.py
src/api/routers/: auth.py  connectors.py  google_sheet_connectors.py  users.py  workflows.py
src/config/: logging_config.py  settings.py
src/connectors/: base_connector.py  google_sheet_connector.py  google_sheets.py  salesforce.py  shopify.py
src/core/: database.py  scheduler.py  security.py
src/models/: github_token.py  logs.py  user.py  workflow.py
src/schemas/: user_schema.py  workflow_schema.py
src/services/: auth_service.py  google_sheet_service.py  sync_service.py  workflow_service.py
src/tests/: test_auth.py  test_connectors.py  test_users.py  test_workers.py  test_workflows.py
src/workers/: worker_main.py
src/workers/tasks/: sync_task.py
